--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
             <img src="./img/img3.png" alt="" />
             <h4>Kuzey Işıkları Gözlemi</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga
-              debitis voluptates mollitia? Id nam nulla dicta omnis esse sequi
-              dolor.
+ :ÇÖnhbg  öm bv
             </p>
             <a href="" class="mybutton">Daha Fazla Oku...</a>
           </div>
